<resources>
    <string name="app_name">ShinkeiSuijaku</string>
    <string name="card_front">集中</string>
    <string name="title_activity_settings">Settings</string>
    <string name="congratulations">Congratulations!</string>
    <string name="notice_reset_board">Board cleared… generating new board</string>

    <!-- Strings related to Settings -->
    <string name="pref_display_latin_text_label">Display Latin text</string>
    <string name="pref_display_latin_text_key" translatable="false">latin_text_key</string>
    <string name="pref_display_latin_text_true">Latin text is displayed</string>
    <string name="pref_display_latin_text_false">Latin text is hidden</string>

    <string name="pref_lesson_label">Lesson Number</string>
    <string name="pref_lesson_default" translatable="false">1</string>
    <string name="pref_lesson_key" translatable="false">lesson_key</string>

    <string name="pref_number_of_columns_label">Number of Columns</string>
    <string name="pref_number_of_columns_default" translatable="false">3</string>
    <string name="pref_number_of_columns_key" translatable="false">number_of_columns_key</string>
    
    <string name="pref_orientation_label">Screen Orientation</string>
    <string name="pref_orientation_default">@string/pref_orientation_value_no_pref</string>
    <string name="pref_orientation_key" translatable="false">orientation_key</string>
    <string name="pref_orientation_label_portrait">Portrait</string>
    <string name="pref_orientation_value_portrait" translatable="false">portrait</string>
    <string name="pref_orientation_label_landscape">Landscape</string>
    <string name="pref_orientation_value_landscape" translatable="false">landscape</string>
    <string name="pref_orientation_label_no_pref">No preference</string>
    <string name="pref_orientation_value_no_pref" translatable="false">no_preference</string>

    <!-- Strings for the toolbar menu -->
    <string name="action_latin">Display Latin text</string>
    <string name="action_reset">Reset board</string>
    <string name="action_settings">Settings</string>
</resources>
