<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_display_latin_text_default"
        android:key="@string/pref_display_latin_text_key"
        android:summaryOff="@string/pref_display_latin_text_false"
        android:summaryOn="@string/pref_display_latin_text_true"
        android:title="@string/pref_display_latin_text_label"/>

    <ListPreference
        android:defaultValue="@string/pref_lesson_default"
        android:entries="@array/pref_lesson_number_options"
        android:entryValues="@array/pref_lesson_number_options"
        android:key="@string/pref_lesson_key"
        android:title="@string/pref_lesson_label"/>

    <ListPreference
        android:defaultValue="@string/pref_number_of_columns_default"
        android:entries="@array/pref_number_of_columns_options"
        android:entryValues="@array/pref_number_of_columns_options"
        android:key="@string/pref_number_of_columns_key"
        android:title="@string/pref_number_of_columns_label"/>

    <ListPreference
        android:defaultValue="@string/pref_orientation_default"
        android:entries="@array/pref_orientation_option_labels"
        android:entryValues="@array/pref_orientation_option_values"
        android:key="@string/pref_orientation_key"
        android:title="@string/pref_orientation_label"/>

</PreferenceScreen>
