<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_latin"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="99"
        android:title="@string/action_latin"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
</menu>